still trying to get an idea of what layout I would like to go with

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <div class="nav-bar">
-        <span>iHeartHannah</span>
+        <span class="logo">iHeartHannah</span>
         <ul class="nav-items">
             <li><span>A</span></li>
             <li><span>B</span></li>
             <li><span>C</span></li>
         </ul>
     </div>
-    <div>
-        
+    <div class="body-div">
+        <span class="text">This is a site I am making to surprise my best friend for her birthday.</span>
+        <span class="text">It is clearly in the works.</span>
     </div>
 </body>
 </html>
